<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bar30_depth</name>
    <version>0.0.1</version>
    <description>The Bar30 depth sensor ROS2 driver</description>
    <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
    <license>BSD-3-Clause</license>
    <url type="repository">https://github.com/RobustFieldAutonomyLab/bluerov</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>builtin_interfaces</depend>
    <depend>bluerov_bridge</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>