<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar_oculus</name>
  <version>2.0.0</version>
  <description>ROS2 driver for Blueprint Subsea Oculus sonar</description>
  <maintainer email="vsieben@slb.com">Vincent Sieben</maintainer>
  <maintainer email="pvt@mit.edu">Pedro Vaz Teixeira</maintainer>
  <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
  <license>Schlumberger retains all rights and privledges</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
